--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -15,8 +15,8 @@ jobs:
     outputs:
       no_release: ${{ steps.check_for_norelease_label.outputs.result }}
     steps:
-    - id: check_for_norelease_label
-      name: Check for 'no_release' label on PR
+    - name: Check for 'no_release' label on PR
+      id: check_for_norelease_label
       uses: actions/github-script@v2
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -36,7 +36,7 @@ jobs:
       run: |
         echo "no_release: ${{ steps.check_for_norelease_label.outputs.result }}"
 
-  check_for_open_prs:
+  check_ready_to_release:
     runs-on: ubuntu-latest
     needs: check_for_norelease_label
     if: |
@@ -46,8 +46,8 @@ jobs:
       pending_release_pr_list: ${{ steps.get_release_pending_pr_list.outputs.result }}
       ready_to_release: ${{ steps.watch_dependabot_prs.outputs.is_complete == 'True' && steps.get_release_pending_pr_list.outputs.is_release_pending }}
     steps:
-    - id: get_open_pr_list
-      name: Get Open PRs
+    - name: Get Open PRs
+      id: get_open_pr_list
       uses: actions/github-script@v2
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -64,7 +64,8 @@ jobs:
       run: |
         echo "open_pr_list : ${{ steps.get_open_pr_list.outputs.result }}"
 
-    - id: get_release_pending_pr_list
+    - name: Get 'pending_release' PRs
+      id: get_release_pending_pr_list
       uses: actions/github-script@v2
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -84,8 +85,8 @@ jobs:
         echo "release_pending_pr_list : ${{ steps.get_release_pending_pr_list.outputs.result }}"
         echo "is_release_pending : ${{ steps.get_release_pending_pr_list.outputs.is_release_pending }}"
 
-    - id: watch_dependabot_prs
-      name: Watch Dependabot PRs
+    - name: Watch Dependabot PRs
+      id: watch_dependabot_prs      
       uses: endjin/pr-autoflow/actions/dependabot-pr-watcher@v1
       with:
         pr_titles: ${{ steps.get_open_pr_list.outputs.result }}
@@ -101,9 +102,9 @@ jobs:
 
   tag_for_release:
     runs-on: ubuntu-latest
-    needs: check_for_open_prs
+    needs: check_ready_to_release
     if: |
-      needs.check_for_open_prs.outputs.ready_to_release == 'true'
+      needs.check_ready_to_release.outputs.ready_to_release == 'true'
     steps:
     - uses: actions/setup-dotnet@v1
       with:
@@ -129,20 +130,20 @@ jobs:
         app_id: ${{ secrets.ENDJIN_BOT_APP_ID }}
         private_key: ${{ secrets.ENDJIN_BOT_PRIVATE_KEY }}
 
-    # create the SemVer tag
-    - uses: hole19/git-tag-action@master
+    - name: Create SemVer tag
+      uses: hole19/git-tag-action@master
       env:
         TAG: ${{ steps.run_gitversion.outputs.semver }}
         GITHUB_TOKEN: '${{ steps.generate_token.outputs.token }}'
 
-    # remove the 'release_pending' labels
-    - id: remove_pending_release_labels
+    - name: Remove 'release_pending' label from PRs
+      id: remove_pending_release_labels
       uses: actions/github-script@v2
       with:
         github-token: '${{ steps.generate_token.outputs.token }}'
         script: |
-          core.info('PRs to unlabel: ${{ needs.check_for_open_prs.outputs.pending_release_pr_list }}')
-          const pr_list = JSON.parse('${{ needs.check_for_open_prs.outputs.pending_release_pr_list }}')
+          core.info('PRs to unlabel: ${{ needs.check_ready_to_release.outputs.pending_release_pr_list }}')
+          const pr_list = JSON.parse('${{ needs.check_ready_to_release.outputs.pending_release_pr_list }}')
           core.info(`pr_list: ${pr_list}`)
           for (const i of pr_list) {
             core.info(`Removing label 'pending_release' from issue #${i}`)
